Fixed scaling issues with Archive page on mobile.

--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-html {
-    font-display: optional;
-}
-
 body {
     font-family: 'Kanit', Helvetica, Arial;
     letter-spacing: 0.037em;
@@ -424,14 +420,22 @@ h4 {
     font-size: .75em;
 }
 
+.content-body {
+    width: 100%;
+    margin: 0 auto;
+}
+
+.content-body ul {
+        list-style-type: none;
+        padding-left: 0;
+}
+
 .archive-list {
-    list-style-type: none;
     position: relative;
-    left: -2.5em;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     flex-flow: row wrap;
-    width: 110%;
+    width: 100%;
 }
 
 .archive-list a {
@@ -447,18 +451,22 @@ h4 {
 }
 
 .achive-list-item {
-    width: 27.25%;
+    width: 30%;
     height: auto;
     line-height: 0%;
     padding: 1em 1em 1em 1em;
     background-color: #dcdfe2;
     color: #16253c;
     border-radius: 5px;
-    margin: 0 .75em .75em 0;
+    margin: 0 0 .75em 0;
 }
 
 .archive-item-active {  
         box-shadow: 0px 0px 0px 3px #e7ebee;
+}
+
+.phantom-box {
+    visibility: hidden;
 }
 
 .arch-img-div {
@@ -689,7 +697,7 @@ border-color: #2688B4;
 
 #form-textarea {
     margin: 0 0 2em 0;
-    width: 97.75%;
+    width: 96.625%;
 }
 
 input {
@@ -697,7 +705,7 @@ input {
 }
 
 textarea {
-    padding: .5em .25em .25em .75em;
+    padding: .5em .75em .25em .75em;
 }
 
 input, select, textarea, button {
@@ -760,3 +768,106 @@ input:focus, select:focus, textarea:focus, button:focus {
     position: relative;
     top: -.75em;
 }
+
+/* MEDIA QUERIES */
+
+@media (max-width: 1024px) {
+    .achive-list-item {
+        width: 29.375%;
+    }
+    
+    .arch-img-div {
+        height: 61px;
+    }
+    }
+
+@media (max-width: 812px) {
+    .achive-list-item {
+        width: 27.125%;
+    }
+
+    .arch-img-div {
+        height: 50px;
+    }
+
+    @media (max-height: 375px) {
+        .achive-list-item {
+            width: 28.25%;
+        }
+        
+        .arch-img-div {
+            height: 77px;
+        }
+        }
+}
+
+@media (max-width: 800px){
+    .achive-list-item {
+        width: 28.125%;
+    }
+
+@media (max-width: 768px) {
+    .achive-list-item {
+        width: 28%;
+    }
+    
+    .arch-img-div {
+        height: 61px;
+    }
+    }
+
+@media (max-width: 740px) {
+    .achive-list-item {
+        width: 27.825%;
+    }
+        
+    .arch-img-div {
+        height: 69px;
+    }
+    }
+
+@media (max-width: 667px) {
+    .achive-list-item {
+        width: 27.125%;
+    }
+        
+    .arch-img-div {
+        height: 60px;
+    }
+    }
+
+@media (max-width: 414px) {
+
+    .stuff-padding, .white-box-cont {
+        padding: 1em;
+    }
+        
+    #form-textarea {
+        width: 92%;
+    }
+        
+    .achive-list-item {
+       width: 40.5%;
+    }
+        
+    .arch-img-div {
+        height: 46px;
+    }
+    }
+
+@media (max-width: 375px) {
+    .achive-list-item {
+        width: 39.5%;
+    }
+    }
+        
+
+@media (max-width: 360px) {
+    .logo, .nav {
+        position: relative;
+        left: -.5em;
+      }
+      .achive-list-item {
+        width: 39.125%;
+    }
+    }
